--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body {
     font-family: system-ui;
     background: #f06d06;
-    color: white;
+    color: aliceblue;
 
 }
 
 a{
     text-decoration: none;
+    color: aliceblue;
+}
+h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: aliceblue;
 }
